test/error/sema/nullable-must-be-unwrapped.dsk
struct S
    x: int
end

let s: ?S = null
echo(s.x)
